fix: update viewport meta tag and apply overflow hidden style to html and body

--- a/src/app/styles/_style.scss
+++ b/src/app/styles/_style.scss
@@ -1,5 +1,6 @@
 @use "../../helpers/helper.scss" as h;
 
+html,
 body {
   overflow: hidden;
   font-family: h.$space-mono;
